updated gs script

--- a/recorder.html
+++ b/recorder.html
@@ -29,10 +29,10 @@
             <label class="label has-text-light is-size-5">닉네임 혹은 아이디 둘 중 하나는 필수입력</label>
             <div class="field has-addons">
                 <p class="control">
-                    <input class="input" id="uid" placeholder="아이디">
+                    <input class="input" id="nickname" placeholder="닉네임">
                 </p>
                 <p class="control">
-                    <input class="input" id="nickname" placeholder="닉네임">
+                    <input class="input" id="uid" placeholder="아이디 - 필수입력">
                 </p>
                 
                 <p class="control">
@@ -47,7 +47,7 @@
                 </p>
             </div>
             <div class="block">
-                <p class="help is-danger is-size-4" style="display:none" id="result_entry_warning">유저와 룰렛 결과를 입력해 주세요</p>
+                <p class="help is-danger is-size-4" style="display:none" id="result_entry_warning">유저 아이디와 룰렛 결과를 입력해 주세요</p>
             </div>
         </div>
 
