updated readme + UI label

--- a/recorder.html
+++ b/recorder.html
@@ -26,7 +26,7 @@
         <h1 class="title has-text-light">룰렛 기록기</h1>
 
         <div class="field">
-            <label class="label has-text-light is-size-5">닉네임 혹은 아이디 둘 중 하나는 필수입력</label>
+            <label class="label has-text-light is-size-5">아이디만 필수입력</label>
             <div class="field has-addons">
                 <p class="control">
                     <input class="input" id="nickname" placeholder="닉네임">
